# genetic-neural-network

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
include/neural_network/: Neuron.hpp
src/: main.cpp
src/neural_network/: Neuron.cpp
